--- a/robot exercise/robot.html
+++ b/robot exercise/robot.html
@@ -4,32 +4,38 @@
     <link rel="stylesheet" href="robot.css">
     <style>
 
+      #face{
+        position: absolute;
+        top: 100px;
+        left: 100px;
+      }
+
       #eyes2{
         position: absolute;
-        top: 200px;
-        right: 500px;
-        width: 20%;
+        top: 300px;
+        left: 170px;
+        width: 120px;
       }
 
       #mouth2{
         position: absolute;
-        top: 300px;
-        right: 500px;
-        width: 20%;
+        top: 400px;
+        left: 220px;
+        width: 100px;
       }
 
       #hat{
         position: absolute;
-        top: -20px;
-        right: 370px;
-        width: 40%;
+        top: 87px;
+        left: 163px;
+        width: 276px;
       }
 
       #nose1{
         position: absolute;
-        top: 180px;
-        right: 380px;
-        width: 10%;
+        top: 281px;
+        left: 354px;
+        width: 54px;
       }
 
     </style>
